# libx264videostegano

./: .gitignore  make-project.sh
ffmpeg/: .gitignore  README.md  config.asm  config.fate  config.h  config.mak  description-pak  detail-libavcodec  ffmpeg.files  ffmpeg.includes
ffmpeg/doc/examples/: a.out  tags
ffmpeg/libavcodec/: Makefile  avcodec.h  decodeMessage.c  decodeMessage.h  h264.h  h264_cabac.c  h264_cavlc.c  h264_sei.c  h264_slice.c  libx264.c  options.c  utils.c
ffmpeg/share/man/man1/: ffserver-all.1
libvideostegano/: .gitignore  CMakeLists.txt  Destegano.cpp  Destegano.h  README.md  Stegano.cpp  Stegano.h  SteganoCommon.h  VideoSteg.cpp  VideoSteg.h
libvideostegano/Private/: ErrorStructure.hpp  clsAvMediaDecoder.cpp  clsAvMediaDecoder.h  clsDemuxer.cpp  clsDemuxer.h  clsLiveServerMediaSubsession.h  clsMuxer.cpp  clsMuxer.h  clsPrivateDestegano.cpp  clsPrivateDestegano.h  clsPrivateStegano.cpp  clsPrivateStegano.h  clsVideoFramedSource.cpp  clsVideoFramedSource.h  clsX264encoder.cpp  clsX264encoder.h  hlpFunctions.cpp  hlpFunctions.h
libvideostegano/Private/ffmpeg/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
libx264/: .gitignore  Makefile  message.c  message.h  tags  x264.files  x264.h  x264.includes
libx264/common/: common.c  common.h
libx264/encoder/: analyse.c  encoder.c  ratecontrol.c  set.c  set.h
testStegano/: .gitignore  CMakeLists.txt  main.cpp
